Fix scroll on mobile

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
 }
 
 .is-active {
-  display: block;
+  display: inherit;
 }
 
 .is-visible {
